Fix overflow in header description section and main heading

--- a/css/styles.css
+++ b/css/styles.css
@@ -240,6 +240,12 @@ header .container .side-actions .right-side-action {
   }
   /* hamburger */
 
+  header .container .heading-information {
+    border: 1px solid brown;
+    justify-content: center;
+    align-items: center;
+  }
+
 
   header .container .side-actions {
     background-color: gray;
